envoy.yaml
layered_runtime:
  layers:
    - name: deprecation
      static_layer:
        "envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst": true
        "envoy.reloadable_features.strict_1xx_and_204_response_headers": false
        "re2.max_program_size.error_level": 1024
        "envoy.reloadable_features.http_reject_path_with_fragment": false
        "envoy.reloadable_features.treat_host_like_authority": false
        "envoy.reloadable_features.sanitize_http_header_referer": false
        "envoy.reloadable_features.local_ratelimit_match_all_descriptors": false
    - name: global config
      static_layer:
        "overload.global_downstream_max_connections": 2147483647
    - name: admin
      admin_layer: {}
static_resources:
  listeners:
    - name: in-8887
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8887
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "inbound"
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% \"%UPSTREAM_TRANSPORT_FAILURE_REASON%\" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%REQ(WM_CONSUMER.ID)%\" \"%REQ(WM_SVC.NAME)%\" \"%REQ(WM_SVC.ENV)%\" \"%REQ(WM_SVC. [...]
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: "inbound"
      connect_timeout: 0.25s
      type: strict_dns # static
      lb_policy: round_robin
      load_assignment:
        cluster_name: "inbound|8086||"
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "127.0.0.1"
                      port_value: 8888
                      protocol: TCP
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
